@@ -1,0 +1,26 @@
+SET(INDEXER_SRCS
+${CMAKE_CURRENT_SOURCE_DIR}/bio.c
+${CMAKE_CURRENT_SOURCE_DIR}/cio.c
+${CMAKE_CURRENT_SOURCE_DIR}/index_create.c
+${CMAKE_CURRENT_SOURCE_DIR}/int.c
+${CMAKE_CURRENT_SOURCE_DIR}/jp2.c
+${CMAKE_CURRENT_SOURCE_DIR}/jpip.c
+${CMAKE_CURRENT_SOURCE_DIR}/pi.c
+${CMAKE_CURRENT_SOURCE_DIR}/t2.c
+${CMAKE_CURRENT_SOURCE_DIR}/tcd.c
+${CMAKE_CURRENT_SOURCE_DIR}/tgt.c
+)
+
+# Build executable
+
+ADD_EXECUTABLE(index_create ${INDEXER_SRCS})
+
+# On unix you need to link to the math library:
+IF(UNIX)
+  TARGET_LINK_LIBRARIES(index_create m)
+ENDIF(UNIX)
+# Install exe
+INSTALL(TARGETS index_create
+  EXPORT OpenJPEGTargets
+  DESTINATION ${OPENJPEG_INSTALL_BIN_DIR} COMPONENT Applications
+)
